<resources>
    <string name="app_name">Liebe</string>

    <string name="login">Log in</string>
    <string name="registrarse">Sign in</string>
    <string name="registro"> Create Account in Liebe</string>
    <string name="usuario">User</string>
    <string name="contraseña">Password</string>
    <string name="contraseña2">Confirm Password</string>
    <string name="olvido_contraseña"><u>I forgot my password.</u></string>
    <string name="nombre">Name</string>
    <string name="email">Email address</string>
    <string name="condiciones">Aceptar <u>Condiciones de uso y Privacidad</u></string>
    <string name="reinciar_passwd">Reset Password</string>
    <string name="info_passwd">An email has been sent to the following email: </string>

    <string name="entendido">Agree</string>
    <string name="tips">Take the proper precautions and educate yourself well to protect yourself and take care of those around you.</string>
    <string name="sabermas">Know more</string>
    <string name="cambiar_diamantes_flechas">Change diamonds to arrows</string>
    <string name="info_cambio">You do not have enough diamonds, 10 Diamonds = 1 Arrow</string>


    <string name="datos_personales">Personal information</string>
    <string name="fecha_nacimiento">Birthdate</string>
    <string name="ejem_fecha_nacimiento">01/01/1901</string>
    <string name="genero">Gender</string>
    <string name="gen_hombre">Man</string>
    <string name="gen_mujer">Woman</string>
    <string name="gen_otro">Other</string>
    <string name="sobre_mi">About me</string>
    <string name="des_sobre_mi">app: I like the cinema and i love the naturgy (Máximo 140 caracteres)</string>


    <string name="bienvenida">We welcome you to Liebe.</string>
    <string name="norma1">  ✅  Dont share your personal information lightly.</string>
    <string name="norma2">  ✅  Respect others and treat everyone as you would like to be treated.</string>
    <string name="norma3">  ✅  Always report any inappropriate behavior.</string>
    <string name="norma4">  ✅  Make sure the photos, age and bio that appear on your profile accurately reflect who you are.</string>
    <string name="norma5">  ✅  Don’t be fake. Be real instead. Don’t use Liebe to drive people to external websites via a link or otherwise.</string>
    <string name="norma6">  ✅  Do not engage, or encourage others to engage, in any targeted abuse or harassment against any other user. This includes sending any unsolicited sexual content. Reports of stalking, threats, bullying, or intimidation, are taken very seriously.</string>

    <string name="añadir_fotos">Add photos</string>
    <string name="ayuda">Help</string>
    <string name="ayuda_fotos">Add at least 2 photos to continue</string>
    <string name="cancelar">Cancel</string>

    <string name="corazon">Heart</string>
    <string name="flecha">Love crush</string>
    <string name="numero_flechas">0</string>
    <string name="no">No</string>
    <string name="fresa">Strawberry</string>
    <string name="limon">Lemon</string>
    <string name="coco">Coco</string>
    <string name="slot1">Slot1</string>
    <string name="slot2">Slot2</string>
    <string name="slot3">Slot3</string>

    <string name="play">Play</string>


    <string name="home">Index</string>
    <string name="msg">Msg</string>
    <string name="perfil">Profile</string>
    <string name="notificaciones">Notifications</string>

    <string name="acepto">Okay</string>
    <string name="continuar">Continue</string>
    <string name="atras">Back</string>
    <string name="contacto">Contact</string>
    <string name="ayuda_contacto">Do you want to access the liebe contact website?</string>

    <string name="muestrame">Show me</string>
    <string name="hombes">Men</string>
    <string name="mujeres">Women</string>
    <string name="ambos">Both of them</string>
    <string name="busco">I search</string>
    <string name="busco_relacion">A relationship</string>
    <string name="busco_amistad">A friendship</string>
    <string name="busco_noche">A passionate night</string>

    <string name="compartir_perfil">Share profile</string>
    <string name="report_user">Report</string>

    <string name="borrar_foto">Delete Photo</string>
    <string name="copiar_foto">Copy Photo</string>

    <string name="title_activity_main_activity2__perfil">MainActivity2_Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="eliminar_cuenta">Delete account</string>
    <string name="guardar_cambios">Save changes</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Edit Profile</string>
    <string name="menu_slideshow">Settings</string>

    <string name="ayuda_eventos">This user has never accepted any appointment</string>
    <string name="conseguir_flechas">Get arrows</string>

    <string name="cita">Love date</string>
    <string name="cita_hora">17:00</string>
    <string name="cita_dia">25/12/2023</string>
    <string name="enviar_cita">Send appointment</string>


    <string name="help_internet">You do not have an internet connection</string>
    <string name="reintentar_internet">Retry</string>
    <string name="requerido">Required</string>
    <string name="registrado">Registered</string>
    <string name="contrasenas_no_coinciden">Passwords do not match</string>
    <string name="contrasenas_caracteres">The password must have a minimum of 6 characters</string>
    <string name="aceptar_usos">You must accept the use policies</string>
    <string name="correo_no">The email address or password is not correct</string>
    <string name="help_muestrame_busco">Debes seleccionar</string>


    <string name="slot_win">Congratulations you have won an arrow.</string>
    <string name="slot_loss">Sorry, you havent won any arrows, try again.</string>
    <string name="slot_diamond1">You ve got</string>
    <string name="slot_diamond2"> diamonds.</string>


    <string name="camara">Camera</string>
    <string name="imagen">Gallery Image</string>
    <string name="persona">Persona</string>
    <string name="slotmachine">Slot Machine</string>

</resources>