<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_Settings">

    <TextView
        android:id="@+id/textView_Settings"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/redondear_textview"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/menuscrollNormas"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="47dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_norma1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma3"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma4"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma6"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonEliminarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:onClick="borrarCuenta"
        android:text="@string/eliminar_cuenta" />

</RelativeLayout>