<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_BienvenidaNormas">


    <ScrollView
        android:id="@+id/menuscroll"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="476dp"
        android:layout_above="@+id/button_AceptoNormas"
        android:layout_below="@+id/textView_bienvenida"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="47dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_norma1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma3"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma4"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_norma6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norma6"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/pink_safe"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_AceptoNormas"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="0dp"
        android:text="@string/acepto"
        android:textSize="24sp" />
</RelativeLayout>