<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_EditProfile"
    android:background="#282827">

    <ScrollView
        android:id="@+id/menuscrollEdit" style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="411dp"
        android:layout_height="520dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_NombreEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/pink"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_FechaNacimientoEditProfile"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/redondear_textview"
                android:text="@string/fecha_nacimiento"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText_FechaNacimientoEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/ejem_fecha_nacimiento"
                android:inputType="date"
                android:onClick="obtenerFecha"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/pink"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView_GeneroEditProfile"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/redondear_textview"
                android:text="@string/genero"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_HombreEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="seleccion"
                    android:text="@string/gen_hombre"
                    android:textColor="@color/pink"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/radioButton_MujerEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="seleccion"
                    android:text="@string/gen_mujer"
                    android:textColor="@color/teal_200"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/radioButton_OtroEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="seleccion"
                    android:text="@string/gen_otro"
                    android:textColor="#FFFA00"
                    android:textSize="24sp"
                    android:textStyle="italic" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinner_GeneroEditProfile"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/pink"
                android:textAlignment="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView_BuscoEditProfile"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/redondear_textview"
                android:text="@string/busco"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup_BuscoEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_BuscoRelacionEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:onClick="seleccion"
                    android:text="@string/busco_relacion"
                    android:textColor="#F3030B"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/radioButton2radioButton_BuscoNocheEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:onClick="seleccion"
                    android:text="@string/busco_noche"
                    android:textColor="#6A1B9A"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/radioButton_BuscoAmistadEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:onClick="seleccion"
                    android:text="@string/busco_amistad"
                    android:textColor="#69F803"
                    android:textSize="24sp"
                    android:textStyle="italic" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView_MuestrameEditProfile"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/redondear_textview"
                android:text="@string/muestrame"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup_MuestrameEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButton_MuestremeMujeresEditProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:onClick="seleccion"
                        android:text="@string/mujeres"
                        android:textColor="@color/pink"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <RadioButton
                        android:id="@+id/radioButton_MuestremeHombresEditProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:onClick="seleccion"
                        android:text="@string/hombes"
                        android:textColor="@color/teal_200"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <RadioButton
                        android:id="@+id/radioButton_MuestremeAmobsEditProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:onClick="seleccion"
                        android:text="@string/ambos"
                        android:textColor="#E9EF0C"
                        android:textColorHighlight="#E9EF0C"
                        android:textSize="24sp"
                        android:textStyle="italic" />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_EditarCambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="535dp"
        android:onClick="guardarCambios"
        android:text="@string/guardar_cambios"
        android:textSize="24sp" />

</RelativeLayout>